# zplus

./: .gitignore  QUESTIONS.md  README.md  pyproject.toml
docs/: GUIDE.md  QUICKSTART.md  design-profiles-and-authoring.md  plan-administration-phase-a.md  plan-graph-batch-order.md  plan-phase-b2.md  plan-phase-b3.md  plan-wizard-fields.md  plan.md
docs/guide/: authoring.md  cli-reference.md  commands-guide.md  concepts.md  derived-output.md  fields-and-graph.md  for-ai-agents.md  getting-started.md  index.md  profiles-and-tailoring.md
examples/ridgeline-roofing/: README.md  build-demo.sh
examples/ridgeline-roofing/pages/: automation-program.md  company.md  division-of-duties.md  how-we-run.md  key-facts.md  mission-control.md  mission-vision-values.md  review-june.md
examples/ridgeline-roofing/seed/: agents.csv  automations.csv  decisions.csv  incidents.csv  objectives.csv  policies.csv  procedures.csv  roles.csv  sites.csv  systems.csv  vendors.csv
src/zplus/: __init__.py  authoring.py  cli.py  core.py  corpus.py  manifest.py  paths.py  render.py
src/zplus/commands/: add_page.py  add_profile.py  add_type.py  apply.py  check.py  derived.py  entry.py  nav.py  new.py  site.py
src/zplus/data/: env.example  zplus.default.toml
src/zplus/data/profiles/: administration.toml  (+1 more)
src/zplus/patch/: gitignore.py  toml_nav.py
tests/: test_administration_profile.py  test_authoring.py  test_batch.py  test_core.py  test_derived.py  test_fields_and_corpus.py  test_manifest.py  test_nav.py  test_order.py  test_patch.py  test_render.py  test_wizard_fields.py
(+46 files in other folders)
